# DOCXEngineDirectX

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gltfImporter.cpp  gltfImporter.hpp  main.cpp
src/: camera.cpp  camera.hpp  dxCompiler.cpp  dxCompiler.hpp  dxDevice.cpp  dxDevice.hpp  gltfImporter.cpp  gltfImporter.hpp  main.cpp  primitive.cpp  primitive.hpp  primitiveData.hpp  sceneManager.cpp  sceneManager.hpp  sceneNode.cpp  sceneNode.hpp  shaderInfo.hpp  shaderManager.cpp  shaderManager.hpp  transform.cpp  transform.hpp  window.cpp  window.hpp
src/shaders/: main.hlsl
